--- a/public/index.html
+++ b/public/index.html
@@ -1,88 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <title>Lista de quehaceres</title>
+  <title>ToDo List</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="https://loopback.io/favicon.ico">
-
+  <link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <style>
-    h3 {
-      margin-left: 25px;
-      text-align: center;
+    @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;1,700&display=swap');
+
+    body {
+      font-family: 'PT Sans';
     }
 
-    a, a:visited {
-      color: #3f5dff;
-    }
-
-    h3 a {
-      margin-left: 10px;
-    }
-
-    a:hover, a:focus, a:active {
-      color: #001956;
-    }
-
-    .power {
-      position: absolute;
-      bottom: 25px;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
-    .info {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%)
-    }
-
-    .info h1 {
-      text-align: center;
-      margin-bottom: 0;
-    }
-
-    .info p {
-      text-align: center;
-      margin-bottom: 3em;
-      margin-top: 1em;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      body {
-        background-color: rgb(29, 30, 32);
-        color: white;
-      }
-
-      a, a:visited {
-        color: #4990e2;
-      }
-
-      a:hover, a:focus, a:active {
-        color: #2b78ff;
-      }
-    }
   </style>
 </head>
 
 <body>
-  <div class="info">
-    <h1>dolist</h1>
-    <p>Version 1.0.0</p>
-
-    <h3>OpenAPI spec: <a href="./openapi.json">/openapi.json</a></h3>
-    <h3>API Explorer: <a href="./explorer">/explorer</a></h3>
+  <div class="container">
+    <div class="card text-center">
+      <div class="card-header">
+        <h4>Lista de quehaceres</h4>
+      </div>
+      <div class="card-body">
+        <form class="row g-3">
+          <div class="col-md-4">
+            <label for="validationDefault01" class="form-label">Tarea</label>
+            <input type="text" class="form-control" id="tarea" name="tarea" value="" required>
+          </div>
+          <div class="col-md-4">
+            <label for="validationDefault02" class="form-label">Descripción</label>
+            <input type="text" class="form-control" id="descripcion" name="descripcion" value="" required>
+          </div>
+          <div class="col-md-4">
+            <label for="validationDefault02" class="form-label">Fecha para realizar</label>
+            <input type="text" class="form-control" id="fecha_realizar" name="fecha_realizar" value="" required>
+          </div>
+          <input type="hidden" class="form-control" id="fecha_creacion" name="fecha_creacion" value="" required>
+          <div class="col-12">
+            <button class="btn btn-primary" type="submit">Submit form</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 
-  <footer class="power">
-    <a href="https://loopback.io" target="_blank">
-      <img src="https://loopback.io/images/branding/powered-by-loopback/blue/powered-by-loopback-sm.png" />
-    </a>
+  <div class="container">
+    <div class="card text-center">
+      <div class="card-body">
+        <div class="container">
+          <table id="tabla" class="display">
+            <thead>
+              <tr>
+                <th>Tarea</th>
+                <th>Descripción</th>
+                <th>Fecha de creación</th>
+                <th>Fecha para realizar</th>
+              </tr>
+            </thead>
+            <tbody id="cuerpoDeLaTabla">
+              <tr>
+                <td>1</td>
+                <td>a</td>
+                <td>1</td>
+                <td>a</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>b</td>
+                <td>1</td>
+                <td>a</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+  <script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('#tabla').DataTable({
+        language: {
+          processing: "Procesando..",
+          search: "Buscar&nbsp;:",
+          lengthMenu: "Mostrar _MENU_ Elementos por pagina",
+          info: "Mostrando de _START_ a _END_ de _TOTAL_ Elementos",
+          infoEmpty: "No hay elementos",
+          infoFiltered: "Existen _MAX_ Elementos",
+          infoPostFix: "",
+          loadingRecords: "Cargando...",
+          zeroRecords: "Nada sobre lo que escribir o mostrar",
+          emptyTable: "No hay datos disponibles en la tabla",
+          paginate: {
+            first: "Inicio",
+            previous: "Anterior",
+            next: "Siguiente",
+            last: "Final"
+          },
+          aria: {
+            sortAscending: ": activar para ordenar la columna en orden ascendente",
+            sortDescending: ": habilitar para ordenar la columna en orden descendente"
+          }
+        }
+      });
+    });
+
+    (function () {
+      console.log("Prueba");
+      $.ajax({
+        type: "GET",
+        url: "/servicio",
+      }).done(function (result) {
+        console.log(result)
+
+      });
+    })();
+  </script>
 </body>
 
 </html>
